--- a/morphserverapp/templates/morphserverapp/jsclient.html
+++ b/morphserverapp/templates/morphserverapp/jsclient.html
@@ -65,10 +65,9 @@
     </div>
 
     <div style="display: none" id="morphing">{{res}}</div>
-    <div style="display: none" id="webgl">"webgl"</div>
+    <div style="display: none" id="webgl">{{engine}}</div>
 
     <div id="footer" >
-        <a href="<%= about_path %>">About</a>
         <a href="javascript:setSelection(); $('#settings').fadeIn()">Settings</a>
         <a href="javascript:$('#help').fadeIn()">Help</a>
     </div>
