--- a/morphserverapp/templates/morphserverapp/morph_request.html
+++ b/morphserverapp/templates/morphserverapp/morph_request.html
@@ -3,18 +3,24 @@
 {% load static %}
 <head>
 <title>MORPH-PRO</title>
-<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 <link rel="stylesheet" media="screen" href="{% static 'stylesheets/blueprint/screen.css' %}" />
 <link rel="stylesheet" media="print" href="{% static 'stylesheets/blueprint/print.css' %}" />
 <link rel="stylesheet" media="screen" href="{% static 'stylesheets/blueprint/ie.css' %}" />
 <link rel="stylesheet" media="screen" href="{% static 'stylesheets/custom.css' %}" />
 <link rel="stylesheet" media="screen" href="{% static 'stylesheets/common.css' %}" />
 <link rel="stylesheet" media="screen" href="{% static 'stylesheets/pages.css' %}" />
-
+    <script src="{%static 'javascripts/Three.js'%}"></script>
+    <script src="{%static 'javascripts/Detector.js'%}"></script>
+    <script src="{%static 'javascripts/RequestAnimationFrame.js'%}"></script>
+    <script src="{%static 'javascripts/jquery-1.6.min.js'%}"></script>
+    <script src="{%static 'javascripts/jquery.corner.js'%}"></script>
+    <script src="{%static 'javascripts/web-3D-viewer1.js'%}"></script>
 
   <link rel="shortcut icon" type="image/x-icon" href="{% static 'images/favicon.ico' %}" />
 </head>
 <body>
+
+
   <div class="container">
     <header>
   <a href="/"><img alt="Morphing server" class="round" src="{% static 'images/logo.png' %}" /></a>
@@ -48,6 +54,23 @@
 <strong>First Protein: </strong>{{ morph_request.protein_a_name }}<br>
 <strong>Second Protein: </strong>{{ morph_request.protein_b_name }}<br>
 <strong>Number of interpolation steps: </strong> {{morph_request.morphing_count}} <br>
+
+    <div class="niggers" style="display: none" id="morph-step">Morph</div>
+    <div style="display: none" id="webgl">{{engine}}</div>
+<table>
+    <thead><tr>
+        <th><label onclick="web1Run('#morphing1')"><input type="submit" value="Show first protein"/></label></th>
+        <th><label onclick="web1Run('#morphing2')"><input type="submit" value="Show second protein"/></label></th>
+        <th><label onclick="web1Delete()"><input type="submit" value="Hide"/></label></th>
+    </tr>
+</thead>
+    <tbody><tr>
+        <th><div style="display: none" id="morphing1">{{pr1}}</div></th>
+        <th><div style="display: none" id="morphing2">{{pr2}}</div></th>
+
+    </tr></tbody>
+</table>
+
 <h3>Morphing</h3>
 <form action="{{ action }}" accept-charset="UTF-8" method="post">
         {% csrf_token %}
@@ -88,6 +111,7 @@
 
 
     </section>
+
     <footer>
   <nav class="round">
       <ul>
