--- a/morphserverapp/templates/morphserverapp/home.html
+++ b/morphserverapp/templates/morphserverapp/home.html
@@ -3,7 +3,6 @@
 {% load static %}
 <head>
   <title>MORPH-PRO</title>
-<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 <link rel="stylesheet" media="screen" href="{% static 'stylesheets/blueprint/screen.css' %}" />
 <link rel="stylesheet" media="print" href="{% static 'stylesheets/blueprint/print.css' %}" />
 <link rel="stylesheet" media="screen" href="{% static 'stylesheets/blueprint/ie.css' %}" />
@@ -61,7 +60,7 @@
 Our server provides you with the following options: <br /><br />
 
 <ul>
-    <li><a href="/morph_requests/new">Upload</a> your own pdb files representing proteins</li>
+    <li><a href="/morph/new">Upload</a> your own pdb files representing proteins</li>
     <li>Perform morphing and examine results in your browser without any plug-ins</li>
     <li>Easily share your morphing results with your colleagues</li>
 </ul>
