--- a/morphserverapp/templates/morphserverapp/morph.html
+++ b/morphserverapp/templates/morphserverapp/morph.html
@@ -3,13 +3,15 @@
 {% load static %}
 <head>
 <title>MORPH-PRO</title>
-<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 <link rel="stylesheet" media="screen" href="{% static 'stylesheets/blueprint/screen.css' %}" />
 <link rel="stylesheet" media="print" href="{% static 'stylesheets/blueprint/print.css' %}" />
 <link rel="stylesheet" media="screen" href="{% static 'stylesheets/blueprint/ie.css' %}" />
 <link rel="stylesheet" media="screen" href="{% static 'stylesheets/custom.css' %}" />
 <link rel="stylesheet" media="screen" href="{% static 'stylesheets/common.css' %}" />
 <link rel="stylesheet" media="screen" href="{% static 'stylesheets/pages.css' %}" />
+
+<script src="{%static 'javascripts/jquery-1.6.min.js'%}"></script>
+
 
 
   <link rel="shortcut icon" type="image/x-icon" href="{% static 'images/favicon.ico' %}" />
@@ -53,24 +55,6 @@
     {% endif %}
 
     <section class="round">
-      <script type="text/javascript">
-    function toggleSteps() {
-        var cb = $('#morph_request_auto_interpolation');
-        var mc = $('#morphing-count');
-        if (cb.is(':checked')) {
-            mc.fadeOut();
-        } else {
-            mc.fadeIn();
-        }
-    }
-
-    function updateProtoName(fileid, updatefieldid) {
-        var me = $('#' + fileid);
-        var filepath = me.val();
-        var ss = filepath.split(/[\\.]/);
-        $('#' + updatefieldid).attr('value', ss[ss.length - 2]);
-    }
-</script>
 <h1>New morphing</h1>
 <form class="new_morph_request" id="new_morph_request" action="./new" method="post" enctype="multipart/form-data">
         {% csrf_token %}
@@ -95,18 +79,18 @@
         </tr>
         <tr>
             <td>
-                <label for="morph_request_auto_interpolation">Choose the number of intermediate states automatically</label>
+                <label for="auto_interpolation">Choose the number of intermediate states automatically</label>
             </td>
             <td>
-                <input name="auto_interpolation" type="hidden" value="0"><input onclick="toggleSteps();" type="checkbox" value="1" checked="checked" name="auto_interpolation" id="morph_request_auto_interpolation">
+                <input name="auto_interpolation" type="hidden" value="0"><input onclick="toggleSteps();" type="checkbox" value="1" checked="checked" name="auto_interpolation" id="auto_interpolation">
             </td>
         </tr>
         <tr id="morphing-count" style="display: none;">
             <td>
-                <label for="morph_request_morphing_count">Number of intermediate <br> states</label>
+                <label for="mr_morphing_count">Number of intermediate <br> states</label>
             </td>
             <td>
-                <input size="3" value="8" type="text" name="morphing_count" id="morph_request_morphing_count">
+                <input size="3" value="8" type="text" name="morphing_count" id="mr_morphing_count">
                 <div class="hint">Should be between 2 and 20</div>
             </td>
         </tr>
@@ -115,6 +99,25 @@
         <input type="submit" name="commit" value="Create Morph request" data-disable-with="Create Morph request">
     </div>
 </form>
+<script type="text/javascript">
+    function toggleSteps() {
+        var cb = $("#auto_interpolation");
+        var mc = $("#morphing-count");
+        if (cb.checked) {
+            mc.fadeOut();
+        }
+        else {
+            mc.fadeIn();
+        }
+    }
+
+    function updateProtoName(fileid, updatefieldid) {
+        var me = $('#' + fileid);
+        var filepath = me.val();
+        var ss = filepath.split(/[\\.]/);
+        $('#' + updatefieldid).attr('value', ss[ss.length - 2]);
+    }
+</script>
     </section>
     <footer>
   <nav class="round">
