--- a/morphserverapp/templates/morphserverapp/help.html
+++ b/morphserverapp/templates/morphserverapp/help.html
@@ -26,9 +26,9 @@
 
     <li><a href="/morph_requests/new">morph!</a></li>
       {% if user_greeting %}
-      <li><a href="/history">my requests</a></li>
+      <li><a href="/history/1">my requests</a></li>
       {% endif %}
-    <li><a href="/morph/archive">archive</a></li>
+    <li><a href="/morph/archive/1">archive</a></li>
       {% if user_greeting %}
       <li> <a href="/user/sign_out">sign out</a></li>
       {% else %}
