--- a/morphserverapp/templates/morphserverapp/jsclient.html
+++ b/morphserverapp/templates/morphserverapp/jsclient.html
@@ -65,7 +65,7 @@
     </div>
 
     <div style="display: none" id="morphing">{{res}}</div>
-    <div style="display: none" id="webgl">{{engine}}</div>
+    <div style="display: none" id="engine">{{engine}}</div>
 
     <div id="footer" >
         <a href="javascript:setSelection(); $('#settings').fadeIn()">Settings</a>
