--- a/morphserverapp/templates/morphserverapp/new_password.html
+++ b/morphserverapp/templates/morphserverapp/new_password.html
@@ -23,7 +23,7 @@
     <li><a href="/">home</a></li>
 
     <li><a href="/morph_requests/new">morph!</a></li>
-    <li><a href="/morph/archive">archive</a></li>
+    <li><a href="/morph/archive/1">archive</a></li>
       <li><a href="/user/sign_in">sign in</a></li>
   </ul>
 </nav>
