--- a/morphserverapp/templates/morphserverapp/home.html
+++ b/morphserverapp/templates/morphserverapp/home.html
@@ -65,6 +65,11 @@ Our server provides you with the following options: <br /><br />
     <li>Easily share your morphing results with your colleagues</li>
 </ul>
 
+<img src="{% static 'images/dog1.gif' %}" align="left">
+<img src="{% static 'images/dog2.gif' %}">
+<img src="{% static 'images/dog2.gif' %}">
+<img src="{% static 'images/dog2.gif' %}">
+<img src="{% static 'images/dog1.gif' %}" align="right">
 
 
 
