--- a/morphserverapp/templates/morphserverapp/home.html
+++ b/morphserverapp/templates/morphserverapp/home.html
@@ -61,7 +61,7 @@ Our server provides you with the following options: <br /><br />
 
 <ul>
     <li><a href="/morph/new">Upload</a> your own pdb files representing proteins</li>
-    <li>Perform morphing and examine results in your browser without any plug-ins</li>
+    <li>Perform morphng and examine results in your browser without any plug-ins</li>
     <li>Easily share your morphing results with your colleagues</li>
 </ul>
 
