--- a/morphserverapp/templates/morphserverapp/jsclient.html
+++ b/morphserverapp/templates/morphserverapp/jsclient.html
@@ -6,12 +6,7 @@
     <title>
       JS client
     </title>
-      <link rel="stylesheet" media="screen" href="{% static 'stylesheets/blueprint/screen.css' %}" />
-      <link rel="stylesheet" media="print" href="{% static 'stylesheets/blueprint/print.css' %}" />
-      <link rel="stylesheet" media="screen" href="{% static 'stylesheets/blueprint/ie.css' %}" />
-      <link rel="stylesheet" media="screen" href="{% static 'stylesheets/custom.css' %}" />
-      <link rel="stylesheet" media="screen" href="{% static 'stylesheets/common.css' %}" />
-      <link rel="stylesheet" media="screen" href="{% static 'stylesheets/pages.css' %}" />
+      <link rel="stylesheet" media="screen" href="{% static 'stylesheets/jsclient.css' %}" />
       <script src="{%static 'javascripts/Three.js'%}"></script>
       <script src="{%static 'javascripts/Detector.js'%}"></script>
       <script src="{%static 'javascripts/RequestAnimationFrame.js'%}"></script>
