--- a/morphserverapp/templates/morphserverapp/jsclient.html
+++ b/morphserverapp/templates/morphserverapp/jsclient.html
@@ -65,6 +65,7 @@
     <div id="footer" >
         <a href="javascript:setSelection(); $('#settings').fadeIn()">Settings</a>
         <a href="javascript:$('#help').fadeIn()">Help</a>
+        <a href="{{back}}">Back</a>
     </div>
     <script type="text/javascript">
         // hiding panels & setting round corners
