--- a/static/stylesheets/blueprint/screen.css
+++ b/static/stylesheets/blueprint/screen.css
@@ -61,8 +61,10 @@ dd {margin-left:1.5em;}
 table {margin-bottom:1.4em;width:100%;}
 th {font-weight:bold;}
 thead th {background:#c3d9ff;}
+thead td {background:#c3d9ff; text-align:center;}
 th, td, caption {padding:4px 10px 4px 5px;}
 tbody tr:nth-child(even) td, tbody tr.even td {background:#e5ecf9;}
+tbody td{text-align:center; vertical-align:middle;}
 tfoot {font-style:italic;}
 caption {background:#eee;}
 .small {font-size:.8em;margin-bottom:1.875em;line-height:1.875em;}
