--- a/morphserverapp/templates/morphserverapp/jsclient.html
+++ b/morphserverapp/templates/morphserverapp/jsclient.html
@@ -32,13 +32,13 @@
             You can rotate the protein with your mouse using drag-and-drop. In addition, you can use the following hot keys:
         </div>
         <table id="keys"><tr>
-                <td><span>h</span> or <span>left arrow</span></td><td>rotate left</td>
+                <td><span>w</span> or <span>up arrow</span></td><td>rotate up</td>
             </tr><tr>
-                <td><span>j</span> or <span>down arrow</span></td><td>rotate down</td>
+                <td><span>a</span> or <span>left arrow</span></td><td>rotate left</td>
             </tr><tr>
-                <td><span>k</span> or <span>up arrow</span></td><td>rotate up</td>
+                <td><span>s</span> or <span>down arrow</span></td><td>rotate down</td>
             </tr><tr>
-                <td><span>l</span> or <span>right arrow</span></td><td>rotate left</td>
+                <td><span>d</span> or <span>right arrow</span></td><td>rotate right</td>
             </tr><tr>
                 <td><span>+</span></td><td>zoom in</td>
             </tr><tr>
